--- a/html/calendar.html
+++ b/html/calendar.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <!--    Nav bar   -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbarStyle">
     <a class="navbar-brand" href="#"><span id="homepagetitle">Chronos</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -53,6 +54,7 @@
       </ul>
     </div>
   </nav>
+    
   <div class="content">
     <div class="calendar-container">
       <div class="calendar">
@@ -98,7 +100,7 @@
         <span class="left-button" id="prev"> &lang; </span>
         <span class="right-button" id="next"> &rang; </span>
       </div>
-
+        <!--    Days in the week    -->
       <table class="days-table">
         <td class="day">Sun</td>
         <td class="day">Mon</td>
@@ -117,7 +119,7 @@
       <button class="button" id="add-button">+</button>
     </div>
 
-
+      <!--   Dialog to add in new events   -->
     <div class="dialog" id="dialog">
       <h2 class="dialog-header"> Add New Event! </h2>
       <form class="form" id="form">
