--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="desc" id="planningInfo">Chronos is the number one leading calendar site for CST students. With
                 ease and quickness, students can view assignments, quizzes, and exams at the tip of their fingers.</div>
         </div>
-
+        <!--   Empowering ideas for Chronos     -->
         <h4 class="chronosHead">Empower Yourself</h4>
 
         <div class="responsive">
@@ -90,7 +90,7 @@
         </div>
 
         <div class="clearfix"></div>
-
+        <!--   Quote of the day     -->
         <div id="mainQuote">
             <p>" They always say time changes things, but you actually have to change them yourself. "</p>
             <p id="quoteWho">Andy Warhol<br> Previous CST student</p>
@@ -98,6 +98,7 @@
         <h2 id="team"><span style="color: red">Meet</span> The Team</h2>
         <br>
 
+        <!--    Team members!    -->
         <div class="row">
             <div class="column">
                 <div class="card">
@@ -105,8 +106,8 @@
                     <div class="container">
                         <h2>Adam</h2>
                         <p class="title">Founder</p>
-                        <p class="profileText">Some text that describes me lorem ipsum ipsum lorem.</p>
-                        <p>example@example.com</p>
+                        <p class="profileText">"I like work: it fascinates me. I can sit and look at it for hours."</p>
+                        <p>adam@mail.com</p>
                         <p><button class="button">Contact</button></p>
                     </div>
                 </div>
@@ -118,8 +119,8 @@
                     <div class="container">
                         <h2>Charlie</h2>
                         <p class="title">Founder</p>
-                        <p class="profileText">Some text that describes me lorem ipsum ipsum lorem.</p>
-                        <p>example@example.com</p>
+                        <p class="profileText">"Out of clutter, find simplicity."</p>
+                        <p>charlie@mail.com</p>
                         <p><button class="button">Contact</button></p>
                     </div>
                 </div>
@@ -130,8 +131,8 @@
                     <div class="container">
                         <h2>William</h2>
                         <p class="title">Founder</p>
-                        <p class="profileText">Some text that describes me lorem ipsum ipsum lorem.</p>
-                        <p>example@example.com</p>
+                        <p class="profileText">"Believe in yourself!"</p>
+                        <p>william@mail.com</p>
                         <p><button class="button">Contact</button></p>
                     </div>
                 </div>
